[package]
name = "hunspell-sys"
description = "Bindings to the hunspell C API."
version = "0.1.2"
authors = ["Andy Russell <arussell123@gmail.com>"]
edition = "2018"
repository = "https://github.com/euclio/hunspell-sys"
keywords = ["hunspell"]
categories = ["external-ffi-bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "euclio/hunspell-sys" }

[dependencies]

[build-dependencies]
bindgen = "0.49.0"
pkg-config = "0.3.14"
autotools = "0.2.1"
