[package]
name = "hunspell-sys"
description = "Bindings to the hunspell C API."
version = "0.2.1"
authors = ["Andy Russell <arussell123@gmail.com>"]
edition = "2018"
repository = "https://github.com/euclio/hunspell-sys"
keywords = ["hunspell"]
categories = ["external-ffi-bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "euclio/hunspell-sys" }

[dependencies]

[dev-dependencies]
tempfile = "3.1.0"

[build-dependencies]
bindgen = "0.55.0"
pkg-config = "0.3.17"
cc = { version = "1.0.58", optional = true }

[features]

default = []

bundled = ["cc"]
