[package]
name = "hunspell-sys"
description = "Bindings to the hunspell C API."
version = "0.3.1"
authors = ["Andy Russell <arussell123@gmail.com>"]
edition = "2018"
repository = "https://github.com/euclio/hunspell-sys"
keywords = ["hunspell"]
categories = ["external-ffi-bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "euclio/hunspell-sys" }

[dependencies]

[dev-dependencies]
tempfile = "3.1.0"

[build-dependencies]
bindgen = { version = "0.61.0", default-features = false, features = ["logging", "which-rustfmt"]}
pkg-config = "0.3.17"
cc = { version = "1.0.58", optional = true }

[features]
default = []
bundled = [ "cc" ]

# link libclang statically
static_libclang = [ "bindgen/static" ]
# link system hunspell statically
static = []
